<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/artistDetailFragment">

    <data>
        <variable
            name="artist"
            type="com.example.vinyls_jetpack_application.models.Artist" />
        <variable
            name="album"
            type="com.example.vinyls_jetpack_application.models.Album"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="75dp"
            app:shapeAppearanceOverlay="@style/RoundedCardView">

            <ImageView
                android:id="@+id/artistDetailImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:imageUrl="@{artist.image}"
                android:contentDescription="Imagen propia" />

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistDetailNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{artist.name}"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_favorite"
                android:contentDescription="@string/add_comment" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/artistDetailDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/artistDetailBirthdateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/placeholderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="Álbumes"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.076"
                    tools:layout_conversion_absoluteHeight="24dp"
                    tools:layout_conversion_absoluteWidth="331dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/albumCarouselRv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.133"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/placeholderTextView"
                    tools:layout_conversion_absoluteHeight="193dp"
                    tools:layout_conversion_absoluteWidth="361dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="28dp"
                    android:clickable="true"
                    app:backgroundTint="#FF9800"
                    app:elevation="4dp"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="#FFFFFF"
                    app:srcCompat="@drawable/baseline_add_24"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="56dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>
